--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
