--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.12.8",
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/js-yaml": "^4.0.1",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
