--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon",
-    "postinstall": "tsc",
+    "postinstall": "build",
+    "build": "tsc",
     "deploy": "git push heroku main"
   },
   "dependencies": {
