Add configuration for heroku

--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,3 @@
 # URI of mongo atlas database 
 MONGO_URI=mongodb+srv://<username>:<password>@cluster0.0d0ba.mongodb.net/development?retryWrites=true&w=majority
+PORT=3000
