--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "16.0.0"
+    "node": "16.x"
   },
   "scripts": {
     "dev": "nodemon",
-    "postinstall": "build",
-    "build": "tsc",
+    "postinstall": "yarn build",
+    "clean": "rimraf dist/",
+    "copy-other-files": "copyfiles -u 1 src/**/*.yaml dist/",
+    "build": "yarn clean && tsc && yarn copy-other-files",
     "deploy": "git push heroku main"
   },
   "dependencies": {
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.12.8",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
