--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,7 @@
+PORT=3000
+
 # URI of mongo atlas database 
 MONGO_URI=mongodb+srv://<username>:<password>@cluster0.0d0ba.mongodb.net/development?retryWrites=true&w=majority
-PORT=3000
+
+# Endpoint of client app that will connect to websocket
+CLIENT_ORIGIN=http://localhost:8000
