--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "deploy": "git push heroku main"
   },
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.12.8",
     "mongoose": "^5.12.7",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/js-yaml": "^4.0.1",
     "@types/node": "^15.0.1",
+    "@types/socket.io": "^2.1.13",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "nodemon": "^2.0.7",
